@@ -410,7 +410,8 @@ vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest
 #   EXTENSION
 #     Here you can specify the display extension to be used. With the value
 #     'none' you can use standard VGA with no extension. Other supported
-#     values are 'vbe' for Bochs VBE and 'cirrus' for Cirrus SVGA support.
+#     values are 'vbe' for Bochs VBE, 'cirrus' for Cirrus SVGA support and
+#     'voodoo' for Voodoo Graphics support (see 'voodoo' option).
 #
 #   UPDATE_FREQ
 #     This parameter specifies the number of display updates per second.
@@ -432,9 +433,11 @@ vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest
 #=======================================================================
 # VOODOO:
 # This defines the Voodoo Graphics emulation (experimental). Currently
-# supported models are 'voodoo1' and 'voodoo2'. The Voodoo2 support is not yet
-# complete, but almost usable. The gui screen update timing is controlled by
-# the related 'vga' options.
+# supported models are 'voodoo1', 'voodoo2' and 'banshee'. The Voodoo2 support
+# is not yet complete, but almost usable. The Banshee support is under
+# construction, but basicly usable. It requires an external VGA BIOS the vga
+# extension option to be set to 'voodoo'. The gui screen update timing for all
+# models is controlled by the related 'vga' options.
 #
 # Examples:
 #   voodoo: enabled=1, model=voodoo2
